--- a/lc-admin/src/main/resources/templates/modules/sys/styleindex-1.html
+++ b/lc-admin/src/main/resources/templates/modules/sys/styleindex-1.html
@@ -14,48 +14,48 @@
 
 <div class="albums-tab">
     <div class="albums-tab-thumb sim-anim-1">
-        <img src="${request.contextPath}/statics/images/x-1.png" class="all studio"/>
+        <img src="${request.contextPath}/statics/images/x-7.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-2.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-3.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-4.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-5.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-6.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-7.png" class="all studio"/>
+        <img src="${request.contextPath}/statics/images/x-1.png" class="all studio"/>
     </div>
-    <div class="albums-tab-text">.sim-anim-1 <span>(7 pictures)</span></div>
+    <div class="albums-tab-text">厦门拍摄-1 <span></span></div>
 </div>
 
 <div class="albums-tab">
     <div class="albums-tab-thumb sim-anim-2">
+        <img src="${request.contextPath}/statics/images/x-5.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-1.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-2.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-3.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-4.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-5.png" class="all studio"/>
+        <img src="${request.contextPath}/statics/images/x-2.png" class="all studio"/>
     </div>
-    <div class="albums-tab-text">.sim-anim-2 <span>(5 pictures)</span></div>
+    <div class="albums-tab-text">厦门拍摄-2 <span></span></div>
 </div>
 
 
 <div class="albums-tab">
     <div class="albums-tab-thumb sim-anim-3">
-        <img src="${request.contextPath}/statics/images/x-1.png" class="all studio"/>
+        <img src="${request.contextPath}/statics/images/x-9.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-2.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-3.png" class="all studio"/>
+        <img src="${request.contextPath}/statics/images/x-1.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-4.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-5.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-6.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-7.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-8.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-9.png" class="all studio"/>
+        <img src="${request.contextPath}/statics/images/x-3.png" class="all studio"/>
     </div>
-    <div class="albums-tab-text">.sim-anim-3 <span>(9 pictures)</span></div>
+    <div class="albums-tab-text">厦门拍摄-3 <span></span></div>
 </div>
 
 
 <div class="albums-tab">
     <div class="albums-tab-thumb sim-anim-4">
-        <img src="${request.contextPath}/statics/images/x-1.png" class="all studio"/>
+        <img src="${request.contextPath}/statics/images/x-9.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-2.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-3.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-4.png" class="all studio"/>
@@ -63,9 +63,9 @@
         <img src="${request.contextPath}/statics/images/x-6.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-7.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-8.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-9.png" class="all studio"/>
+        <img src="${request.contextPath}/statics/images/x-4.png" class="all studio"/>
     </div>
-    <div class="albums-tab-text">.sim-anim-4 <span>(9 pictures)</span></div>
+    <div class="albums-tab-text">厦门拍摄-4 <span></span></div>
 </div>
 
 <div class="albums-tab">
@@ -76,23 +76,23 @@
         <img src="${request.contextPath}/statics/images/x-4.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-5.png" class="all studio"/>
     </div>
-    <div class="albums-tab-text">.sim-anim-5 <span>(5 pictures)</span></div>
+    <div class="albums-tab-text">厦门拍摄-5 <span></span></div>
 </div>
 
 
 <div class="albums-tab">
     <div class="albums-tab-thumb sim-anim-6">
-        <img src="${request.contextPath}/statics/images/x-1.png" class="all studio"/>
+        <img src="${request.contextPath}/statics/images/x-9.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-2.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-3.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-4.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-5.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-6.png" class="all studio"/>
+        <img src="${request.contextPath}/statics/images/x-1.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-7.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-8.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-9.png" class="all studio"/>
+        <img src="${request.contextPath}/statics/images/x-6.png" class="all studio"/>
     </div>
-    <div class="albums-tab-text">.sim-anim-6 <span>(9 pictures)</span></div>
+    <div class="albums-tab-text">厦门拍摄-6 <span></span></div>
 </div>
 
 
@@ -101,24 +101,24 @@
         <img src="${request.contextPath}/statics/images/x-1.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-2.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-3.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-4.png" class="all studio"/>
+        <img src="${request.contextPath}/statics/images/x-7.png" class="all studio"/>
     </div>
-    <div class="albums-tab-text">.sim-anim-7 <span>(4 pictures)</span></div>
+    <div class="albums-tab-text">厦门拍摄-7 <span></span></div>
 </div>
 
 <div class="albums-tab">
     <div class="albums-tab-thumb sim-anim-8">
-        <img src="${request.contextPath}/statics/images/x-1.png" class="all studio"/>
+        <img src="${request.contextPath}/statics/images/x-9.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-2.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-3.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-4.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-5.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-6.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-7.png" class="all studio"/>
+        <img src="${request.contextPath}/statics/images/x-1.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-8.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-9.png" class="all studio"/>
     </div>
-    <div class="albums-tab-text">.sim-anim-8 <span>(9 pictures)</span></div>
+    <div class="albums-tab-text">厦门拍摄-8 <span></span></div>
 </div>
 
 <div class="albums-tab">
@@ -133,7 +133,7 @@
         <img src="${request.contextPath}/statics/images/x-8.png" class="all studio"/>
         <img src="${request.contextPath}/statics/images/x-9.png" class="all studio"/>
     </div>
-    <div class="albums-tab-text">.sim-anim-9 <span>(9 pictures)</span></div>
+    <div class="albums-tab-text">厦门拍摄-9 <span></span></div>
 </div>
 
 
