--- a/lc-admin/src/main/resources/templates/modules/sys/styleindex-6.html
+++ b/lc-admin/src/main/resources/templates/modules/sys/styleindex-6.html
@@ -1,143 +1,143 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>风格展示</title>
-<link href="${request.contextPath}/statics/css/style-main.css" rel="stylesheet" type="text/css"/>
-<link href="${request.contextPath}/statics/css/sim-prev-anim.css" rel="stylesheet" type="text/css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>风格展示</title>
+    <link href="${request.contextPath}/statics/css/style-main.css" rel="stylesheet" type="text/css"/>
+    <link href="${request.contextPath}/statics/css/sim-prev-anim.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
 <!-- 代码部分begin -->
 <div class="albums">
-<div class="albums-inner">
+    <div class="albums-inner">
 
-<div class="albums-tab">
-    <div class="albums-tab-thumb sim-anim-1">
-        <img src="${request.contextPath}/statics/images/x-1.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-2.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-3.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-4.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-5.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-6.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-7.png" class="all studio"/>
+        <div class="albums-tab">
+            <div class="albums-tab-thumb sim-anim-1">
+                <img src="${request.contextPath}/statics/images/xn-7.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-2.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-3.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-4.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-5.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-6.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-1.png" class="all studio"/>
+            </div>
+            <div class="albums-tab-text">仙女湖拍摄-1 <span></span></div>
+        </div>
+
+        <div class="albums-tab">
+            <div class="albums-tab-thumb sim-anim-2">
+                <img src="${request.contextPath}/statics/images/xn-5.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-1.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-3.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-4.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-2.png" class="all studio"/>
+            </div>
+            <div class="albums-tab-text">仙女湖拍摄-2 <span></span></div>
+        </div>
+
+
+        <div class="albums-tab">
+            <div class="albums-tab-thumb sim-anim-3">
+                <img src="${request.contextPath}/statics/images/xn-9.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-2.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-1.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-4.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-5.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-6.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-7.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-8.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-3.png" class="all studio"/>
+            </div>
+            <div class="albums-tab-text">仙女湖拍摄-3 <span></span></div>
+        </div>
+
+
+        <div class="albums-tab">
+            <div class="albums-tab-thumb sim-anim-4">
+                <img src="${request.contextPath}/statics/images/xn-9.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-2.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-3.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-4.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-5.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-6.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-7.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-8.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-4.png" class="all studio"/>
+            </div>
+            <div class="albums-tab-text">仙女湖拍摄-4 <span></span></div>
+        </div>
+
+        <div class="albums-tab">
+            <div class="albums-tab-thumb sim-anim-5">
+                <img src="${request.contextPath}/statics/images/xn-1.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-2.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-3.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-4.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-5.png" class="all studio"/>
+            </div>
+            <div class="albums-tab-text">仙女湖拍摄-5 <span></span></div>
+        </div>
+
+
+        <div class="albums-tab">
+            <div class="albums-tab-thumb sim-anim-6">
+                <img src="${request.contextPath}/statics/images/xn-9.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-2.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-3.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-4.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-5.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-1.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-7.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-8.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-6.png" class="all studio"/>
+            </div>
+            <div class="albums-tab-text">仙女湖拍摄-6 <span></span></div>
+        </div>
+
+
+        <div class="albums-tab">
+            <div class="albums-tab-thumb sim-anim-7">
+                <img src="${request.contextPath}/statics/images/xn-1.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-2.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-3.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-7.png" class="all studio"/>
+            </div>
+            <div class="albums-tab-text">仙女湖拍摄-7 <span></span></div>
+        </div>
+
+        <div class="albums-tab">
+            <div class="albums-tab-thumb sim-anim-8">
+                <img src="${request.contextPath}/statics/images/xn-9.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-2.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-3.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-4.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-5.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-6.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-7.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-1.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-8.png" class="all studio"/>
+            </div>
+            <div class="albums-tab-text">仙女湖拍摄-8 <span></span></div>
+        </div>
+
+        <div class="albums-tab">
+            <div class="albums-tab-thumb sim-anim-9">
+                <img src="${request.contextPath}/statics/images/xn-1.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-2.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-3.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-4.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-5.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-6.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-7.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-8.png" class="all studio"/>
+                <img src="${request.contextPath}/statics/images/xn-9.png" class="all studio"/>
+            </div>
+            <div class="albums-tab-text">仙女湖拍摄-9 <span></span></div>
+        </div>
+
+
     </div>
-    <div class="albums-tab-text">.sim-anim-1 <span>(7 pictures)</span></div>
-</div>
-
-<div class="albums-tab">
-    <div class="albums-tab-thumb sim-anim-2">
-        <img src="${request.contextPath}/statics/images/x-1.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-2.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-3.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-4.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-5.png" class="all studio"/>
-    </div>
-    <div class="albums-tab-text">.sim-anim-2 <span>(5 pictures)</span></div>
-</div>
-
-
-<div class="albums-tab">
-    <div class="albums-tab-thumb sim-anim-3">
-        <img src="${request.contextPath}/statics/images/x-1.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-2.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-3.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-4.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-5.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-6.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-7.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-8.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-9.png" class="all studio"/>
-    </div>
-    <div class="albums-tab-text">.sim-anim-3 <span>(9 pictures)</span></div>
-</div>
-
-
-<div class="albums-tab">
-    <div class="albums-tab-thumb sim-anim-4">
-        <img src="${request.contextPath}/statics/images/x-1.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-2.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-3.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-4.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-5.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-6.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-7.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-8.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-9.png" class="all studio"/>
-    </div>
-    <div class="albums-tab-text">.sim-anim-4 <span>(9 pictures)</span></div>
-</div>
-
-<div class="albums-tab">
-    <div class="albums-tab-thumb sim-anim-5">
-        <img src="${request.contextPath}/statics/images/x-1.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-2.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-3.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-4.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-5.png" class="all studio"/>
-    </div>
-    <div class="albums-tab-text">.sim-anim-5 <span>(5 pictures)</span></div>
-</div>
-
-
-<div class="albums-tab">
-    <div class="albums-tab-thumb sim-anim-6">
-        <img src="${request.contextPath}/statics/images/x-1.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-2.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-3.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-4.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-5.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-6.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-7.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-8.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-9.png" class="all studio"/>
-    </div>
-    <div class="albums-tab-text">.sim-anim-6 <span>(9 pictures)</span></div>
-</div>
-
-
-<div class="albums-tab">
-    <div class="albums-tab-thumb sim-anim-7">
-        <img src="${request.contextPath}/statics/images/x-1.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-2.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-3.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-4.png" class="all studio"/>
-    </div>
-    <div class="albums-tab-text">.sim-anim-7 <span>(4 pictures)</span></div>
-</div>
-
-<div class="albums-tab">
-    <div class="albums-tab-thumb sim-anim-8">
-        <img src="${request.contextPath}/statics/images/x-1.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-2.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-3.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-4.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-5.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-6.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-7.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-8.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-9.png" class="all studio"/>
-    </div>
-    <div class="albums-tab-text">.sim-anim-8 <span>(9 pictures)</span></div>
-</div>
-
-<div class="albums-tab">
-    <div class="albums-tab-thumb sim-anim-9">
-        <img src="${request.contextPath}/statics/images/x-1.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-2.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-3.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-4.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-5.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-6.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-7.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-8.png" class="all studio"/>
-        <img src="${request.contextPath}/statics/images/x-9.png" class="all studio"/>
-    </div>
-    <div class="albums-tab-text">.sim-anim-9 <span>(9 pictures)</span></div>
-</div>
-
-
-</div>
 </div>
 <!-- 代码部分end -->
 </body>
